--- a/public/401.html
+++ b/public/401.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html><!--  This site was created in Webflow. http://www.webflow.com  -->
-<!--  Last Published: Wed Aug 18 2021 07:12:42 GMT+0000 (Coordinated Universal Time)  -->
+<!--  Last Published: Sun Nov 28 2021 01:35:57 GMT+0000 (Coordinated Universal Time)  -->
 <html data-wf-page="6101f1cf10d102328363a64b" data-wf-site="6101d25861d4e1837a071348">
 <head>
   <meta charset="utf-8">
@@ -22,7 +22,7 @@
   <div class="utility-page-wrap">
     <div class="utility-page-content w-password-page w-form">
       <form action="/.wf_auth" method="post" class="utility-page-form w-password-page"><img src="https://d3e54v103j8qbb.cloudfront.net/static/utility-lock.ae54711958.svg" alt="">
-        <h2>Protected Page</h2><label for="pass">Password</label><input type="password" autofocus="true" id="pass" name="pass" placeholder="Enter your password" maxlength="256" class="w-password-page w-input"><input type="submit" value="Submit" data-wait="Please wait..." class="w-password-page w-button">
+        <h2>Protected Page</h2><label for="pass">Password</label><input type="password" class="w-password-page w-input" autofocus="true" maxlength="256" name="pass" data-name="field" placeholder="Enter your password" id="pass"><input type="submit" value="Submit" data-wait="Please wait..." class="w-password-page w-button">
         <div class="w-password-page w-form-fail">
           <div>Incorrect password. Please try again.</div>
         </div>
